More to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,14 @@
 request_test.ipynb
 capstone_reduced.ipynb
 Capstone_1.ipynb
+data_preprocessing.ipynb
 
 # Data
 full_combined_dataset.csv
 Salmonella_amr_data.csv
 Salmonella_genome_data.csv
 Untitled.ipynb
+
 
 # Helper python files
 custom_train_functions.py
